<resources>
    <string name="app_name">AdvWeek4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">Detail</string>
    <string name="update">Update</string>
    <string name="create_notification">Create Notification</string>
    <string name="phone">Phone</string>
    <string name="birth_of_date">Birth Of Date</string>
    <string name="student_name">Student Name</string>
    <string name="student_id">Student Id</string>
</resources>